<resources>
    <string name="app_name">Track Mate</string>
    <string name="app_name_1">Play</string>
    <string name="app_name_2">Track Mate</string>
    <string name="subtitle_1">Running with global friends!</string>
    <string name="subtitle_2">Powered by Samsung Blockchain Keystore SDK</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_dashboard">대기실</string>
    <string name="menu_send_ether">달리기 시작</string>
    <string name="menu_transaction_history">달리기 기록</string>
    <string name="menu_settings">설정</string>

    <string name="account_name">Account Name</string>
    <string name="public_address">Public Address</string>
    <string name="current_balance">Current Balance</string>
    <string name="qr_code">QR Code</string>


    <string name="launch_nav">Launch Navigation Activity</string>
    <string name="get_started">이곳을 터치</string>
    <string name="adding_account_not_supported_title">Not Supported</string>
    <string name="add_account_not_supported">Adding account is not supported for this device</string>
    <string name="internet_not_available_title">접속 오류</string>

    <string name="close">확인</string>
    <string name="exit">퇴장</string>
    <string name="yes">네</string>
    <string name="no">아니오</string>

    <string name="api_level_not_matched_tittle">SBK Update Required</string>
    <string name="api_level_not_matched_message">Samsung Blockchain Keystore is required to update for using Open Crypto Wallet Features.</string>
    <string name="update_sbk">Update SBK</string>

    <string name="sbk_not_set_title">SBK setup not completed</string>
    <string name="sbk_not_set_message">Samsung Blockchain Keystore is not set, Please setup SBK first.</string>
    <string name="jump_sbk">Go to SBK</string>
    <string name="use_other_keymanager">Use other keyManager</string>

    <string name="sbk_error_title">SBK Error</string>
    <string name="sbk_invalid_address">Receiver Address is invalid</string>
    <string name="sbk_connection_error">Please check internet connection</string>
    <string name="sbk_operation_failed">Operation Failed</string>
    <string name="sbk_enable_developer_options">Please enable developer options from Samsung Blockchain Keystore App</string>
    <string name="sbk_unknown_error">Unknown Error</string>

    <string name="sign_transaction">배팅</string>
    <string name="send_ether">대기열 등록</string>
    <string name="sender_public_address">연결된 계좌</string>
    <string name="receiver_public_address">모드: 달리기 경쟁전</string>
    <string name="ether_amount">코인 배팅</string>
    <string name="transaction_speed">난이도 선택</string>
    <string name="send_speed_slow">초급</string>
    <string name="send_speed_average">중급</string>
    <string name="send_speed_fast">상급</string>
    <string name="hex_data">Hex Data (Optional)</string>

    <string name="send_ether_error_title">배팅 실패!</string>
    <string name="receiver_address_blank">참가할 방이 선택되지 않았습니다.</string>
    <string name="ether_amount_blank">배팅할 코인을 입력하세요.</string>
    <string name="ether_amount_not_enough">코인이 부족합니다.</string>
    <string name="transaction_speed_not_selected">난이도를 선택하세요.</string>

    <string name="transaction_missing">배팅을 먼저 하세요.</string>
    <string name="transaction_signing_title">배팅 완료!</string>
    <string name="transaction_signing_successful">대기열에 등록하세요.</string>

    <string name="add_new_account_title">Add new account</string>
    <string name="add_new_account_message">Do you want to add a new account?</string>

    <string name="edit_account_name_title">닉네임 변경</string>
    <string name="edit_account_name_message">새 닉네임을 입력하세요</string>

    <string name="hello_blank_fragment">Settings Fragment</string>

    <!-- Settings Page -->
    <string name="change_keystore_pin">Change Keystore PIN</string>
    <string name="launch_keystore">Launch Samsung Blockchain Keystore</string>
    <string name="reveal_seed">View Keystore Recovery Phrase</string>
    <string name="reset_wallet">Reset Wallet</string>
    <string name="api_level">SBK API Level</string>
    <string name="api_level_number">Reset Wallet</string>
    <string name="networks">Networks</string>
    <string name="ropsten">Ropsten Testnet</string>
    <string name="kovan">Kovan</string>
    <string name="mainnet">Mainnet</string>
    <string name="network_apply">Apply</string>
    <string name="open_source_licenses">Open Source Licenses</string>
</resources>
