<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_button_account"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_send_ether"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_send_ether" />
        <item
            android:id="@+id/nav_transaction_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/menu_transaction_history" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_icon"
            android:title="@string/menu_settings" />
    </group>

</menu>
